# cianbox-pos

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
apps/desktop/: .env.example  .gitignore  CODE_REVIEW.md  README.md  check_db.py  cianbox-pos.spec  init_db_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/desktop/src/: __init__.py  main.py
apps/desktop/src/api/: __init__.py  afip.py  auth.py  cash.py  client.py  customers.py  exceptions.py  products.py  promotions.py  sales.py  terminals.py
apps/desktop/src/config/: __init__.py  constants.py  logging.py  settings.py
apps/desktop/src/db/: __init__.py  database.py
apps/desktop/src/models/: __init__.py  base.py  customer.py  device.py  product.py  promotion.py  sale.py  sync.py  user.py
apps/desktop/src/repositories/: __init__.py  base.py  config_repository.py  customer_repository.py  device_repository.py  product_repository.py  user_repository.py
apps/desktop/src/services/: __init__.py  cart_service.py  cash_session_manager.py  print_service.py  sync_service.py
apps/desktop/src/ui/: __init__.py  app.py  navigation.py
apps/desktop/src/ui/components/: __init__.py  buttons.py  displays.py  inputs.py  sidebar.py
apps/desktop/src/ui/dialogs/: __init__.py  cash_movement_dialog.py  cash_session_dialog.py  checkout_dialog.py  customer_dialog.py  gift_card_dialog.py  invoice_dialog.py  product_lookup_dialog.py  product_refund_dialog.py  refund_dialog.py  sale_detail_dialog.py  sales_history_dialog.py  size_curve_dialog.py  supervisor_pin_dialog.py  variant_selector_dialog.py
apps/desktop/src/ui/styles/: __init__.py  login_styles.py  stylesheet.py  theme.py
apps/desktop/src/ui/views/: __init__.py  cash_close_view.py  pos_view.py  product_lookup_view.py  refund_view.py  sales_history_view.py
apps/desktop/src/ui/windows/: __init__.py  login_window.py  main_window.py  pos_window.py
apps/desktop/src/utils/: __init__.py  device.py  formatters.py  image_loader.py  validators.py
apps/desktop/tests/: __init__.py  conftest.py  test_formatters.py  test_imports.py  test_sync_service.py  test_validators.py
(+333 files in other folders)
